<?xml version="1.0"?>
<package format="2">
  <name>unit_tests</name>
  <version>0.0.1</version>
  <description>Package for ROS Unit Tests Samples</description>

  <maintainer email="lucas.barbosa@fieb.org.br">
    Lucas Amparo Barbosa
  </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <test_depend>gtest</test_depend>

</package>
